[tool.poetry]
name = "clockwork"
version = "0.3.5"
description = """
Toolkit for time-related operations including scheduling, logging, date
manipulation, and more.
"""
authors = ["Zachary Einck <zacharyeinck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zteinck/clockwork"
homepage = "https://github.com/zteinck/clockwork"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
numpy = "*"
schedule = "*"
holidays = "*"
oddments = ">=0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"